--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   "author": "Razvan Botea <razvan@appscend.com>",
   "license": "GPLv3",
   "dependencies": {
+    "apn": "^1.7.3",
     "async": "^0.9.0",
     "couchbase": "^2.0.6",
     "electron": "^0.4.1",
     "kafka-node": "^0.2.25",
+    "mandrill-api": "^1.0.41",
+    "node-gcm-service": "^0.2.8",
     "private-repo": "git+http://freshweb.ro:7990/scm/bel/octopus-models-lib.git#develop",
     "uuid": "^2.0.1"
   }
