fixed kafka config variable

--- a/config.json
+++ b/config.json
@@ -8,7 +8,6 @@
   "kafka": {
     "host": "blg-kafka.cloudapp.net",
     "port": 2181,
-    "consumerName": "octopus-consumer",
-    "producerName": "octopus-producer"
+    "clientName": "octopus-worker"
   }
 }
