--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   "dependencies": {
     "apn": "^1.7.3",
     "async": "^0.9.0",
+    "colors": "^1.1.0",
     "couchbase": "^2.0.6",
     "electron": "^0.4.1",
-    "kafka-node": "^0.2.25",
+    "kafka-node": "^0.2.27",
     "mandrill-api": "^1.0.41",
     "node-gcm-service": "^0.2.8",
     "object-sizeof": "^1.0.4",
