Aggregator sends and writer receives 1 message with all the delta keys of the affected subscription keys. Using an asynchronous (streaming) method for JSON parsing large objects.

--- a/config.json
+++ b/config.json
@@ -2,8 +2,7 @@
   "couchbase": {
     "host": "blg-couch.cloudapp.net",
     "dataBucket": "default",
-    "stateBucket": "state",
-    "opIdentifierBucket": "op-identifiers"
+    "stateBucket": "state"
   },
   "kafka": {
     "host": "blg-kafka.cloudapp.net",
