Aggregator: * fixed bug on object delete Writer: * Writer receives one message with all the affected subscription keys * Replaced JSON.parse with a streaming method for nonblocking thread safety * Delta keys that are not found are reported to stdout. If no delta key is found, the function ends * Messages are send to transport topics on a per device basis * Client messages now contain the subscription key

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "couchbase": {
-    "host": "blg-couch.cloudapp.net",
+    "host": "blg-couchbase.cloudapp.net",
     "dataBucket": "default",
     "stateBucket": "state"
   },
