--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "apn": "^1.7.3",
     "async": "^1.2.0",
     "bfj": "^1.1.0",
+    "clone": "^1.0.2",
     "colors": "^1.1.0",
     "couchbase": "^2.0.8",
     "electron": "^0.4.1",
