--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "stateBucket": "state"
   },
   "kafka": {
-    "host": "blg-kafka.cloudapp.net",
+    "host": "10.32.0.8",
     "port": 2181,
     "clientName": "octopus-worker"
   }
