--- a/config.json
+++ b/config.json
@@ -8,5 +8,9 @@
     "host": "10.32.0.8",
     "port": 2181,
     "clientName": "octopus-worker"
+  },
+  "redis": {
+	"host": "10.32.0.9",
+	"port": 6379
   }
 }
