--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "colors": "^1.1.0",
     "couchbase": "^2.0.8",
     "electron": "^0.4.1",
+    "hiredis": "^0.4.0",
     "kafka-node": "^0.2.27",
     "mandrill-api": "^1.0.41",
+    "microtime-nodejs": "^1.0.0",
     "node-gcm-service": "^0.2.8",
     "object-sizeof": "^1.0.6",
     "private-repo": "git+http://freshweb.ro:7990/scm/bel/octopus-models-lib.git#develop",
+    "redis": "^0.12.1",
     "socket.io": "^1.3.5",
     "uuid": "^2.0.1"
   }
