updated package.json file with corect license spdx

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "kafka"
   ],
   "author": "Razvan Botea <razvan@appscend.com>",
-  "license": "GPLv3",
+  "license": "Apache-2.0",
   "dependencies": {
     "apn": "^1.7.3",
     "async": "^1.2.0",
