--- a/config.json
+++ b/config.json
@@ -1,16 +1,15 @@
 {
   "couchbase": {
-    "host": "blg-couchbase.cloudapp.net",
-    "dataBucket": "default",
-    "stateBucket": "state"
+    "host": "devel-couchbase.cloudapp.net",
+    "dataBucket": "default"
   },
   "kafka": {
-    "host": "10.32.0.8",
+    "host": "10.32.0.12",
     "port": 2181,
-    "clientName": "octopus-worker"
+    "clientName": "telepat-worker"
   },
   "redis": {
-	"host": "10.32.0.9",
+	"host": "10.32.0.13",
 	"port": 6379
   }
 }
