--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "microtime-nodejs": "^1.0.0",
     "node-gcm-service": "^0.2.8",
     "object-sizeof": "^1.0.6",
-    "telepat-models": "~0.1.2",
+    "telepat-models": "0.2.2",
     "redis": "^0.12.1",
     "socket.io": "^1.3.5",
     "uuid": "^2.0.1"
