--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "kafka"
   ],
   "author": {
-	"name": "Răzvan Botea",
-	"email": "razvan@telepat.io"
+	  "name": "Răzvan Botea",
+	  "email": "razvan@telepat.io"
   },
   "contributors": [
 	{
@@ -30,10 +30,10 @@
 	}
   ],
   "engines": {
-	"node": ">=0.12.0"
+	  "node": ">=0.12.0"
   },
   "bugs": {
-	"url": "https://github.com/telepat-io/telepat-worker/issues"
+	  "url": "https://github.com/telepat-io/telepat-worker/issues"
   },
   "license": "Apache-2.0",
   "dependencies": {
@@ -50,7 +50,7 @@
     "microtime-nodejs": "^1.0.0",
     "node-gcm-service": "^0.2.8",
     "object-sizeof": "^1.0.6",
-    "telepat-models": "0.2.2",
+    "telepat-models": "telepat-io/telepat-models#develop",
     "redis": "^0.12.1",
     "socket.io": "^1.3.5",
     "uuid": "^2.0.1"
