--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Telepat Workers are responsible for processing requests coming from the API and sending notifications to clients",
   "main": "index.js",
   "scripts": {
-	"test": "echo \"Error: no test specified\" && exit 1"
+	"test": "istanbul cover _mocha -- test/worker.js -R spec"
   },
   "repository": {
 	"type": "git",
@@ -52,5 +52,14 @@
 	"socket.io": "^1.3.5",
 	"telepat-models": "telepat-io/telepat-models#develop",
 	"uuid": "^2.0.1"
+  },
+  "devDependencies": {
+	"assert": "^1.3.0",
+	"crypto-js": "^3.1.5",
+	"should": "^7.1.0",
+	"supertest": "^1.1.0",
+	"common": "*",
+	"istanbul": "*",
+	"mocha": "*"
   }
 }
