--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: node_js
 services:
   - elasticsearch
   - redis
+addons:
+	code_climate:
+		repo_token: 91236e484eba6334801432341b099b878715143f54199c53af70b1a836e05109
 notifications:
   slack: appscend:L6jJEK0C6jJQkWr5XPMsDjdv
 env:
