--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,20 @@ addons:
     repo_token: 91236e484eba6334801432341b099b878715143f54199c53af70b1a836e05109
 notifications:
   slack: appscend:L6jJEK0C6jJQkWr5XPMsDjdv
+env:
+  global:
+    - CODECLIMATE_REPO_TOKEN: 7c04f55c7ed08e2c694492e9b39cd73e5cc9bedce02d0a372f3101dc598dcfaa
 before_install:
   - nohup bash -c "git clone https://github.com/telepat-io/telepat-api.git && cd telepat-api && npm install"
   - npm install -g telepat-cli
   - npm install -g codeclimate-test-reporter
   - npm install -g istanbul
   - npm install -g mocha
+  - npm install -g should
+  - npm install -g assert
+  - npm install -g supertest
+  - npm install -g common
+  - npm install -g crypto-js
 install:
   - sudo rabbitmq-plugins enable rabbitmq_management
   - sudo service rabbitmq-server restart
