--- a/.travis.yml
+++ b/.travis.yml
@@ -15,13 +15,6 @@ before_install:
   - nohup bash -c "git clone https://github.com/telepat-io/telepat-api.git && cd telepat-api && npm install"
   - npm install -g telepat-cli
   - npm install -g codeclimate-test-reporter
-  - npm install istanbul
-  - npm install mocha
-  - npm install should
-  - npm install assert
-  - npm install supertest
-  - npm install common
-  - npm install crypto-js
 install:
   - sudo rabbitmq-plugins enable rabbitmq_management
   - sudo service rabbitmq-server restart
@@ -33,6 +26,7 @@ before_script:
   - sleep 30
   - 'echo "script.disable_dynamic: false" | sudo tee -a /etc/elasticsearch/elasticsearch.yml'
   - 'echo "script.groovy.sandbox.enable: true" | sudo tee -a /etc/elasticsearch/elasticsearch.yml'
+  - npm install
 after_script:
     - codeclimate-test-reporter < coverage/lcov.info
 node_js:
