switched telepat-api to develop branch on travis corrected assert pattern

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
   - kafka/bin/kafka-topics.sh --create --partitions 1 --replication-factor 1 --topic android_transport --zookeeper localhost:2181
   - kafka/bin/kafka-topics.sh --create --partitions 1 --replication-factor 1 --topic ios_transport --zookeeper localhost:2181
   - kafka/bin/kafka-topics.sh --create --partitions 1 --replication-factor 1 --topic sockets_transport --zookeeper localhost:2181
-  - nohup bash -c "git clone https://github.com/telepat-io/telepat-api.git && cd telepat-api && npm install"
+  - nohup bash -c "git clone https://github.com/telepat-io/telepat-api.git && cd telepat-api && git checkout develop && npm install"
   - npm install -g telepat-cli
   - npm install -g codeclimate-test-reporter
 install:
