--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "license": "Apache-2.0",
   "dependencies": {
 	"apn": "^1.7.3",
-	"async": "^1.2.0",
+	"async": "1.5.0",
 	"bfj": "^1.1.0",
 	"clone": "^1.0.2",
 	"colors": "^1.1.0",
