--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
 	"object-sizeof": "^1.0.6",
 	"redis": "^0.12.1",
 	"socket.io": "^1.3.5",
-	"telepat-models": "0.2.8",
+	"telepat-models": "telepat-io/telepat-models#develop",
 	"uuid": "^2.0.1"
   }
 }
