--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
 	"node-gcm-service": "^0.2.8",
 	"object-sizeof": "^1.0.6",
 	"redis": "^0.12.1",
-	"socket.io": "^1.3.5",
+	"socket.io": "1.4.4",
 	"telepat-models": "telepat-io/telepat-models#develop",
 	"uuid": "^2.0.1"
   }
