--- a/config.example.json
+++ b/config.example.json
@@ -1,7 +1,12 @@
 {
   "main_database": "ElasticSearch",
   "message_queue": "kafka",
-  "logger": "console_logger",
+  "logger": {
+	"type": "Console",
+	"settings": {
+	  "level": "info"
+	}
+  },
   "ElasticSearch": {
 	"hosts": ["hostname:9200"],
 	"index": "default"
@@ -22,6 +27,5 @@
 	"host": "10.0.0.4",
 	"user": "telepat",
 	"password": "password"
-  },
-  "syslog_logger": ["LOG_NDELAY", "LOG_PID"]
+  }
 }
