--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "telepat-worker",
-  "version": "0.2.8",
+  "version": "0.3.0",
   "description": "Telepat Workers are responsible for processing requests coming from the API and sending notifications to clients",
   "main": "index.js",
   "scripts": {
@@ -50,7 +50,7 @@
 	"object-sizeof": "^1.0.6",
 	"redis": "^0.12.1",
 	"socket.io": "1.4.4",
-	"telepat-models": "telepat-io/telepat-models#develop",
+	"telepat-models": "0.3.0",
 	"uuid": "^2.0.1"
   }
 }
