--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
 	"apn": "^1.7.3",
 	"async": "1.5.0",
+	"aws-sdk": "2.3.15",
 	"bfj": "^1.1.0",
 	"clone": "^1.0.2",
 	"colors": "^1.1.0",
