--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-	"apn": "^1.7.3",
+	"apn": "2.1.3",
 	"async": "1.5.0",
 	"aws-sdk": "2.3.15",
 	"bfj": "^1.1.0",
